 * Added zlib (a.k.a. deflate) decompression filter

Audio output:
 * Complete rewrite of the AudioTrack Android module. This is now the default.
   It now supports HDMI/SPDIF passthrough for AC3, 5.1/7.1 and float output.
 * Added Tizen audio module.
 * HDMI/SPDIF pass-through support for WASAPI

Audio filters and output:
 * Add SoX Resampler library audio filter module (converter and resampler)

Video ouput:
 * Linux/BSD default video output is now OpenGL, instead of Xvideo
 * Wayland shell surface window provider
 * Wayland shared memory video output
 * Large rework of the Android video outputs: there is now Surface (2.1, 2.2)
   NativeWindow (2.3+, supports hw rotation, subpicture blending, opaque)
 * Support rotation in Android NativeWindow output and hardware decoders
 * Renamed the Direct3D output module to Direct3D9
 * Added Direct3D11 video mode supporting both Windows desktop and WinRT modes,
   supporting subpicture blending and hardware acceleration
 * EFL Evas video output with Tizen TBM Surface support
 * New OpenGL provider for Windows

Text renderer:
 * CTL support through Harfbuzz in the Freetype module

Video filter:
 * Hardware deinterlacing on the rPI, using MMAL
 * New video filter to convert between fps rates
 * Added 9-bit and 10-bit support to image adjust filter
 * New edge detection filter uses the Sobel operator to detect edges

Stream Output:
 * Chromecast output module
 * RGB24 and YCbCr 4:2:0 RTP packetization

Encoder:
 * Support for Daala video in 4:2:0 and 4:4:4
 * VP8 and VP9 encoder using libvpx

Muxers:
 * Added fragmented/streamable MP4 muxer
 * Added support for muxing VC1 and WMAPro in MP4
 * Opus in MPEG Transport Stream
 * Daala in Ogg

Service Discovery:
 * New NetBios service discovery using libdsm
 * New mDNS services discovery using libmicrodns
 * New mDNS services discovery using Bonjour (Mac OS X, tvOS, iOS)
 * Rewrite of the UPnP service discovery

Mac OS X Interface
 * Dropped support for Mac OS X 10.6 Snow Leopard