@@ -285,10 +285,10 @@ modules/audio_filter/channel_mixer/trivial.c
 modules/audio_filter/chorus_flanger.c
 modules/audio_filter/compressor.c
 modules/audio_filter/converter/a52tofloat32.c
-modules/audio_filter/converter/a52tospdif.c
 modules/audio_filter/converter/dtstofloat32.c
 modules/audio_filter/converter/format.c
 modules/audio_filter/converter/mpgatofixed32.c
+modules/audio_filter/converter/tospdif.c
 modules/audio_filter/equalizer.c
 modules/audio_filter/equalizer_presets.h
 modules/audio_filter/gain.c
